<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Weather App</string>
    <string name="second_fragment_label">Weather App</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="current_weather">Current Weather</string>
    <string name="waterford_us">Waterford, US</string>
    <string name="november_9_2022">November 9, 2022</string>
    <string name="_0_f">0°F</string>
    <string name="cold_day">Cold Day</string>
    <string name="weather_icon">weather Icon</string>
    <string name="wed_november_16">Wed, November 16</string>
</resources>